# sheepfold

./: CLAUDE.md  Cargo.toml  README.md  notes.md
assets/shaders/: debug.wgsl  orbit.wgsl  ring.wgsl
src/: debug_material.rs  main.rs  orbit_material.rs  resources.rs  solar_system.rs  units.rs
src/main_menu/: mod.rs
src/materials/: debug.rs  mod.rs  orbit.rs
src/settings/: mod.rs
src/solar_system/: components.rs  mod.rs  resources.rs  setup.rs  systems.rs
