[package]
name = "sheepfold"
version = "0.1.0"
edition = "2024"

# dynamic_linking feature enabled for dev work, but should be removed for release 
[dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking"] }
bevy_egui = "0.39.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
